Get all and single finished + add a Match
